@@ -11,7 +11,7 @@ public class NullnessTempTest extends CheckerFrameworkPerDirectoryTest {
 
     /** @param testFiles the files containing test code, which will be type-checked */
     public NullnessTempTest(List<File> testFiles) {
-        // TODO: remove forbidnonnullarraycomponents option once it's no
+        // TODO: remove soundArrayCreationNullness option once it's no
         // longer needed.  See issue #986:
         // https://github.com/typetools/checker-framework/issues/986
         super(
@@ -19,7 +19,7 @@ public class NullnessTempTest extends CheckerFrameworkPerDirectoryTest {
                 org.checkerframework.checker.nullness.NullnessChecker.class,
                 "nullness",
                 "-Anomsgtext",
-                "-Alint=forbidnonnullarraycomponents,"
+                "-Alint=soundArrayCreationNullness,"
                         + NullnessChecker.LINT_REDUNDANTNULLCOMPARISON);
     }
 
