@@ -1,6 +1,9 @@
 Renamed -Anocheckjdk to -ApermitMissingJdk.
 The old version still works, for backward compatibility.
 
+Renamed -Alint=forbidnonnullarraycomponents to
+-Alint=soundArrayCreationNullness.  The old version still works, for
+backward compatibility.
 
 Implementation details:
  * Deprecated QualifierHierarchy#getTypeQualifiers.
